--- a/.github/workflows/coverage-report.yml
+++ b/.github/workflows/coverage-report.yml
@@ -30,7 +30,7 @@ jobs:
         python -m pip install pytest pytest-cov
     - name: Test coverage
       run: |
-        pytest --cov-config=.coveragerc --cov=./ci_course --cov-report=xml
+        pytest --cov-config=.coveragerc --cov=./ci_course --cov-report=xml --cov-branch
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
