--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,12 +6,10 @@ build:
     python: "3.11"
 
 python:
-   install:
-      - method: pip
-        path: .
-        extra_requirements:
-            - docs
-
+  install:
+    - requirements: docs/requirements.txt   
+    - method: pip
+      path: .                               
 sphinx:
   builder: html
   configuration: docs/conf.py
