--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,32 @@
 name: Deploy pages
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  deploy: # a free machine-readable name for this job
-    runs-on: ubuntu-latest # specify the base operating system
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo content # fetch the contents of the repository
+      - name: Checkout repo content
         uses: actions/checkout@v2
+
       - name: Prepare build environment
-        run: | # multiple Bash commands follow
+        run: |
           mkdir -p build
           touch build/.nojekyll
-- name: Run pandoc
-  uses: docker://pandoc/core:2.12 # Always specify a version!
-  with:
-    args: >- # multi-line argument
-      --standalone
-      --output=build/index.html
-      README.md
-- name: Deploy on github pages # Use a third-party plugin to upload the content
-  uses: JamesIves/github-pages-deploy-action@4.1.0
-  with:
-    branch: gh-pages
-    folder: build
+
+      - name: Run pandoc
+        uses: docker://pandoc/core:2.12
+        with:
+          args: >-
+            --standalone
+            --output=build/index.html
+            README.md
+
+      - name: Deploy on github pages
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: gh-pages
+          folder: build
